--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -27,7 +27,7 @@
     <!-- Loading the Letsee WebAR Engine -->
     <script>
         const config = {
-            "appKey": "YOUR_APP_KEY",   // Replace the app key here with your own app key
+            "appKey": "XXXXXXXX",   // Replace the app key here with your own app key
             "trackerType": "IMAGE",     // For planar image tracking, trackerType should be IMAGE
         };
         const letsee = new Letsee(config);
