change to new_marker target

--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -21,13 +21,13 @@
 
     <!-- The id of this div tag MUST be the same with id defined in media="place" style. -->
     <div id="container">
-        <h1>Hello, world!</h1>
+        <h2 style="color: white">Hello, world!</h2>
     </div>
 
     <!-- Loading the Letsee WebAR Engine -->
     <script>
         const config = {
-            "appKey": "XXXXXXXX",   // Replace the app key here with your own app key
+            "appKey": "YOUR_APP_KEY",   // Replace the app key here with your own app key
             "trackerType": "IMAGE",     // For planar image tracking, trackerType should be IMAGE
         };
         const letsee = new Letsee(config);
