--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -21,13 +21,14 @@
 
     <!-- The id of this div tag MUST be the same with id defined in media="place" style. -->
     <div id="container">
-        <h2 style="color: white">Hello, world!</h2>
+        <h2 style="color: white">안녕하세요!</h2>
+        <img src="./custom_marker.jpg" width="50">
     </div>
 
     <!-- Loading the Letsee WebAR Engine -->
     <script>
         const config = {
-            "appKey": "YOUR_APP_KEY",   // Replace the app key here with your own app key
+            "appKey": "f74997f672f2e251be84a05d96cb45a83ce6c3551b7e0c64b207b63a87c4a306",   // Replace the app key here with your own app key
             "trackerType": "IMAGE",     // For planar image tracking, trackerType should be IMAGE
         };
         const letsee = new Letsee(config);
